fix nav size and spacing

--- a/layouts/partials/css/main.css
+++ b/layouts/partials/css/main.css
@@ -189,12 +189,12 @@ div.header nav ul {
   display: inline-flex;
 }
 div.header nav ul li {
-  margin-left: 6px;
-  margin-right: 6px;
+  margin-left: 5px;
+  margin-right: 5px;
 }
 div.header nav ul li:first-child {
-  margin-left: 24px;
-  margin-right: 18px;
+  margin-left: 20px;
+  margin-right: 15px;
 }
 div.header nav ul li:last-child {
   margin-right: 0;
@@ -202,7 +202,7 @@ div.header nav ul li:last-child {
 div.header nav ul a {
   color: #555555;
   font-weight: 400;
-  font-size: 20px;
+  font-size: 18px;
   text-transform: uppercase;
   font-family: 'Helvetica Neue', 'Roboto', 'Arial', sans-serif;
   -webkit-transition: color 0.1s cubic-bezier(0.47, 0, 0.75, 0.72);
